# rectify

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml
rectify/: __init__.py  __main__.py  agent.py  config.py  origins.py  server.py  setup.py  tools.py  uploads.py  workspace.py
rectify/overlay/: rectify.js
rectify/platform/: __init__.py  __main__.py  app.py  auth.py  gate.py  ratelimit.py  seed.py  settings.py  site.py
rectify/platform/starter/: 404.html  index.html  styles.css
tests/python/: conftest.py  test_app.py  test_auth.py  test_build_task.py  test_edit_file.py  test_fuzzy_spans.py  test_inject.py  test_login_template.py  test_origins.py  test_ratelimit.py  test_seed.py  test_server_origin.py  test_settings.py  test_uploads.py  test_workspace.py
